# social_bot

./: LICENSE.md  PLANNED_UPDATES.md  README.md  gui.py  main.py  memories.db  pyproject.toml
modules/agentic_module/: Agentic_Module.py
modules/llm_module/: LLM_Module.py
modules/logo_module/: Logo_Module.py
modules/memory_module/: Memory_Module.py
modules/speak_module/: Speak_Module.py
modules/speech_to_text/: Speech_To_Text_Module.py
settings/: settings.py
