[project]
name = "social-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "numpy>=2.3.3",
    "pathlib>=1.0.1",
    "pip>=25.2",
    "piper-tts>=1.3.0",
    "sounddevice>=0.5.2",
]
